--- a/hivemind_exp/configs/gpu/grpo-qwen-2.5-1.5b-deepseek-r1.yaml
+++ b/hivemind_exp/configs/gpu/grpo-qwen-2.5-1.5b-deepseek-r1.yaml
@@ -1,31 +1,33 @@
 # Model arguments
 model_revision: main
-torch_dtype: bfloat16
-attn_implementation: flash_attention_2
-bf16: true
-tf32: true
+torch_dtype: bfloat16          # Optimal untuk RTX 3090
+attn_implementation: flash_attention_2 # Optimal untuk efisiensi memori & kecepatan
+bf16: true                     # Sesuai dengan torch_dtype
+tf32: true                     # Mempercepat operasi FP32 di RTX 3090
 
 # Dataset arguments
 dataset_id_or_path: 'openai/gsm8k'
 
 # Training arguments
-max_steps: 20 # Original 450
+max_steps: 20 # Original 450 (Sangat rendah, untuk testing. Naikkan untuk training aktual)
 num_train_epochs: 1
-gradient_accumulation_steps: 4
-gradient_checkpointing: true
+gradient_accumulation_steps: 8 # Dinaikkan untuk menjaga effective batch size
+                               # (sebelumnya 4*4=16, sekarang 2*8=16)
+gradient_checkpointing: true   # Sangat penting untuk menghemat VRAM
 gradient_checkpointing_kwargs:
   use_reentrant: false
-learning_rate: 5.0e-7 # 1.0e-6 as in the deepseek math paper 5-e7 from https://hijkzzz.notion.site/unraveling-rlhf-and-its-variants-engineering-insights#147d9a33ecc9806090f3d5c749d31f05
+learning_rate: 5.0e-7
 lr_scheduler_type: cosine
 warmup_ratio: 0.03
 
 # GRPO arguments
 use_vllm: true
-num_generations: 4
-per_device_train_batch_size: 4
-beta: 0.001 # 0.04 as in the deepseek math paper 0.001 from https://hijkzzz.notion.site/unraveling-rlhf-and-its-variants-engineering-insights#147d9a33ecc9806090f3d5c749d31f05
+num_generations: 2             # DIKURANGI dari 4. Ini sangat signifikan mengurangi beban memori vLLM.
+per_device_train_batch_size: 2 # DIKURANGI dari 4. Mengurangi memori untuk aktivasi & gradien training.
+beta: 0.001
 max_prompt_length: 256
-max_completion_length: 1024
+max_completion_length: 1024    # Panjang, signifikan untuk KV cache vLLM. Jika bisa dikurangi, akan membantu.
+vllm_gpu_memory_utilization: 0.25 # DITAMBAHKAN: Mengontrol fraksi memori GPU untuk vLLM (misal, 25% dari 24GB)
 
 # Logging arguments
 logging_strategy: steps
@@ -37,8 +39,8 @@ save_steps: 25
 seed: 42
 
 # Script arguments
-public_maddr: "/ip4/38.101.215.12/tcp/30002"
-host_maddr: "/ip4/0.0.0.0/tcp/38331"
+public_maddr: "/ip4/38.101.215.12/tcp/30002" # Biarkan jika memang untuk setup distributed Anda
+host_maddr: "/ip4/0.0.0.0/tcp/38331"       # Biarkan jika memang untuk setup distributed Anda
 max_rounds: 10000
 
 # Model-specific arguments
