--- a/hivemind_exp/configs/mac/grpo-qwen-2.5-0.5b-deepseek-r1.yaml
+++ b/hivemind_exp/configs/mac/grpo-qwen-2.5-0.5b-deepseek-r1.yaml
@@ -1,7 +1,7 @@
 # Model arguments
 model_revision: main
-torch_dtype: bfloat16
-bf16: true
+torch_dtype: float32
+bf16: false
 tf32: false
 
 # Dataset arguments
@@ -20,7 +20,7 @@ warmup_ratio: 0.03
 # GRPO arguments
 use_vllm: false
 num_generations: 2
-per_device_train_batch_size: 2
+per_device_train_batch_size: 1
 beta: 0.001 # 0.04 as in the deepseek math paper 0.001 from https://hijkzzz.notion.site/unraveling-rlhf-and-its-variants-engineering-insights#147d9a33ecc9806090f3d5c749d31f05
 max_prompt_length: 256
 max_completion_length: 1024
@@ -29,7 +29,7 @@ max_completion_length: 1024
 logging_strategy: steps
 logging_steps: 2
 report_to:
-- tensorboard
+- wandb
 save_strategy: "steps"
 save_steps: 25
 seed: 42
