--- a/hivemind_exp/configs/gpu/grpo-qwen-2.5-32b-bnb-4bit-deepseek-r1.yaml
+++ b/hivemind_exp/configs/gpu/grpo-qwen-2.5-32b-bnb-4bit-deepseek-r1.yaml
@@ -1,44 +1,46 @@
 # Model arguments
 model_revision: main
-torch_dtype: bfloat16  # or float16 if bfloat16 isn't supported
-load_in_4bit: true     # critical for fitting in memory, use bitsandbytes
-bnb_4bit_compute_dtype: bfloat16  # or float16
-bnb_4bit_use_double_quant: true   # further reduces memory
-bnb_4bit_quant_type: nf4          # most memory-efficient quant
+torch_dtype: bfloat16
+attn_implementation: flash_attention_2
+bf16: true
+tf32: true
 
 # Dataset arguments
 dataset_id_or_path: 'openai/gsm8k'
 
-# Device/offload arguments
-device_map: "auto"                # let HF split/model offload as needed
-offload_folder: "./offload"       # folder for CPU offload swap (required if OOM)
-max_memory:
-  "cuda:0": 23GiB                 # leave 1GB for system/X
-  "cpu": 120GiB                   # offload to RAM if needed
-
 # Training arguments
-per_device_train_batch_size: 1    # minimum batch size to avoid OOM
-gradient_accumulation_steps: 8    # increase for effective batch size
-gradient_checkpointing: true      # saves VRAM at cost of compute
+max_steps: 10 # Original 450
+num_train_epochs: 1
+gradient_accumulation_steps: 4
+gradient_checkpointing: true
 gradient_checkpointing_kwargs:
   use_reentrant: false
-learning_rate: 5e-7
-optim: adamw_8bit                 # memory efficient optimizer
-num_train_epochs: 1
-max_steps: 10                     # adjust for your use case
+learning_rate: 5.0e-7 # 1.0e-6 as in the deepseek math paper 5-e7 from https://hijkzzz.notion.site/unraveling-rlhf-and-its-variants-engineering-insights#147d9a33ecc9806090f3d5c749d31f05
+lr_scheduler_type: cosine
+warmup_ratio: 0.03
+optim: adamw_8bit
 
-# Sequence length
-max_prompt_length: 128            # keep context short
-max_completion_length: 256        # keep output short
+# GRPO arguments
+use_vllm: true
+num_generations: 2
+per_device_train_batch_size: 2
+beta: 0.001 # 0.04 as in the deepseek math paper 0.001 from https://hijkzzz.notion.site/unraveling-rlhf-and-its-variants-engineering-insights#147d9a33ecc9806090f3d5c749d31f05
+max_prompt_length: 256
+max_completion_length: 1024
 
-# Logging/Checkpoints
+# Logging arguments
 logging_strategy: steps
 logging_steps: 2
+report_to:
+- wandb
 save_strategy: "steps"
 save_steps: 25
+seed: 42
 
-# For inference with vLLM, try:
-# use_vllm: true
+# Script arguments
+public_maddr: "/ip4/38.101.215.12/tcp/30002"
+host_maddr: "/ip4/0.0.0.0/tcp/38331"
+max_rounds: 10000
 
 # Model-specific arguments
 model_name_or_path: Gensyn/Qwen2.5-32B-Instruct-bnb-4bit
