--- a/hivemind_exp/configs/gpu/grpo-qwen-2.5-7b-deepseek-r1.yaml
+++ b/hivemind_exp/configs/gpu/grpo-qwen-2.5-7b-deepseek-r1.yaml
@@ -1,47 +1,55 @@
-# Model arguments
+# ===================== Model Arguments =====================
+model_name_or_path: Gensyn/Qwen2.5-72B-Instruct-bnb-4bit
 model_revision: main
 torch_dtype: bfloat16
 attn_implementation: flash_attention_2
 bf16: true
 tf32: true
 
-# Dataset arguments
-dataset_id_or_path: 'openai/gsm8k'
+# ===================== Dataset Arguments =====================
+dataset_id_or_path: openai/gsm8k
 
-# Training arguments
-max_steps: 10 # Original 450
+# ===================== Output =====================
+output_dir: runs/gsm8k/multinode/Qwen2.5-72B-Instruct-bnb-4bit-Gensyn-Swarm
+
+# ===================== Training Arguments =====================
+max_steps: 20
 num_train_epochs: 1
+per_device_train_batch_size: 2
 gradient_accumulation_steps: 4
+
+# Memory-efficient training
 gradient_checkpointing: true
 gradient_checkpointing_kwargs:
   use_reentrant: false
-learning_rate: 5.0e-7 # 1.0e-6 as in the deepseek math paper 5-e7 from https://hijkzzz.notion.site/unraveling-rlhf-and-its-variants-engineering-insights#147d9a33ecc9806090f3d5c749d31f05
+
+learning_rate: 5.0e-7
 lr_scheduler_type: cosine
 warmup_ratio: 0.03
 optim: adamw_8bit
 
-# GRPO arguments
-use_vllm: true
+# ===================== CPU + DataLoader Settings =====================
+dataloader_num_workers: 8   # ✅ Multi-threaded data loading
+pin_memory: true            # ✅ Faster CPU-GPU transfers
+
+# ===================== GRPO Arguments =====================
+use_vllm: true              # ✅ Enables vLLM (GPU inference backend)
 num_generations: 2
-per_device_train_batch_size: 2
-beta: 0.001 # 0.04 as in the deepseek math paper 0.001 from https://hijkzzz.notion.site/unraveling-rlhf-and-its-variants-engineering-insights#147d9a33ecc9806090f3d5c749d31f05
+beta: 0.001
 max_prompt_length: 256
 max_completion_length: 1024
 
-# Logging arguments
+# ===================== Logging and Saving =====================
 logging_strategy: steps
 logging_steps: 2
 report_to:
-- wandb
-save_strategy: "steps"
+  - wandb
+save_strategy: steps
 save_steps: 25
 seed: 42
 
-# Script arguments
+# ===================== Gensyn Swarm =====================
 public_maddr: "/ip4/38.101.215.12/tcp/30002"
 host_maddr: "/ip4/0.0.0.0/tcp/38331"
 max_rounds: 10000
 
-# Model-specific arguments
-model_name_or_path: Gensyn/Qwen2.5-72B-Instruct-bnb-4bit
-output_dir: runs/gsm8k/multinode/Qwen2.5-72B-Instruct-bnb-4bit-Gensyn-Swarm
