--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -1,6 +1,7 @@
 bitsandbytes
 colorlog
 datasets
+hivemind @ git+https://github.com/learning-at-home/hivemind@1.11.11
 hf-transfer
 peft
 pytest
@@ -8,12 +9,9 @@ tensorboard
 torch
 transformers==4.48.2
 trl
+unsloth @ pip install git+https://github.com/gensyn-ai/unsloth@main
+unsloth_zoo @ pip install git+https://github.com/gensyn-ai/unsloth-zoo@main
 vllm==0.7.3
 wandb
 web3
 xformers
-
-# Local install (editable mode)
--e ./unsloth
--e ./unsloth-zoo
-
